--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/css/table_and_pagination.css
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/css/table_and_pagination.css
@@ -20,6 +20,15 @@
 /* line 57, ../scss/system/utility.scss */
 .clearfix::after { content: ""; clear: both; }
 
+/* line 62, ../scss/system/utility.scss */
+.margin_top { margin-top: 20px !important; }
+
+/* line 65, ../scss/system/utility.scss */
+.margin_top_clear { margin-top: 0 !important; }
+
+/* line 69, ../scss/system/utility.scss */
+.align_center { text-align: center; }
+
 /*html { position: relative; min-height: 100%;
 }
 
