--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/scss/system/utility.scss
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/scss/system/utility.scss
@@ -59,6 +59,17 @@ $widthDesktop: "840px";
     clear: both;
 }
 
+.margin_top {
+    margin-top: 20px !important;
+}
+.margin_top_clear {
+    margin-top: 0 !important;
+}
+
+.align_center {
+    text-align: center;
+}
+
 /*html {
     position: relative;
     min-height: 100%;
