--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/include/flashBag.html.twig
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/include/flashBag.html.twig
@@ -1,8 +1,6 @@
-<div id="flashBag">
-    <i id="flashBag_close" class="fa fa-close"></i>
-    <div class="content"></div>
-</div>
-<div id="flashBag_popup">
-    <i id="flashBag_popup_close" class="fa fa-close"></i>
-    <div class="content"></div>
+<div id="flashBag" class="mdc-snackbar" aria-live="assertive" aria-atomic="true" aria-hidden="true">
+    <div class="mdc-snackbar__text content"></div>
+    <div class="mdc-snackbar__action-wrapper">
+        <button class="mdc-snackbar__action-button" type="button"></button>
+    </div>
 </div>
