--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/index.html.twig
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/index.html.twig
@@ -22,7 +22,6 @@
     
     <link href="{{asset("bundles/uebusaito/css/system/" ~ settingRow['template_name'] ~ ".css")}}" rel="stylesheet"/>
     <link href="{{asset("bundles/uebusaito/css/loader.css")}}" rel="stylesheet"/>
-    <link href="{{asset("bundles/uebusaito/css/flashBag.css")}}" rel="stylesheet"/>
     <link href="{{asset("bundles/uebusaito/css/table_and_pagination.css")}}" rel="stylesheet"/>
     <link href="{{asset("bundles/uebusaito/css/captcha.css")}}" rel="stylesheet"/>
     <link href="{{asset("bundles/uebusaito/css/upload.css")}}" rel="stylesheet"/>
@@ -92,8 +91,6 @@
     {% if app.request.get("error") is not null and app.request.get("error") is not empty %}
         {{-include("@UebusaitoBundleViews/render/static/error.html.twig")-}}
     {% else %}
-        {#{{-include("@UebusaitoBundleViews/include/flashBag.html.twig")-}}#}
-
         {% if (settingRow['website_active'] == true or is_granted("IS_AUTHENTICATED_FULLY") == true) and urlExtra != "maintenance_authentication" %}
             <div class="sortable_column">
                 {% for value in response.modules.center %}
@@ -166,6 +163,7 @@
 {% endblock %}    
 
 {% block bodyIncludeDown %}
+    {{-include("@UebusaitoBundleViews/include/flashBag.html.twig")-}}
     {#{{-include("@UebusaitoBundleViews/include/loader.html.twig")-}}
     {{-include("@UebusaitoBundleViews/include/popup_easy.html.twig")-}}#}
 {% endblock %}
