--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/module/authentication.html.twig
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/module/authentication.html.twig
@@ -34,15 +34,13 @@
         {% else %}
             {% form_theme form "@UebusaitoBundleViews/layout/layout_form_materialDesign.html.twig" %}
 
-            <form id="form_user_authentication" action="{{path("authentication_enter_check", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
+            <form class="form_user_authentication" action="{{path("authentication_enter_check", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
                 {{form_row(form._username, {'label': "authentication_6"})}}
                 {{form_row(form._password, {'label': "authentication_7"})}}
                 
                 <div>
-                    <div>
-                        {{form_widget(form.submit, {'label': "authentication_9"})}}
-                        {{form_widget(form._remember_me, {'label': "authentication_8"})}}
-                    </div>
+                    {{form_widget(form.submit, {'label': "authentication_9"})}}
+                    {{form_widget(form._remember_me, {'label': "authentication_8"})}}
                 </div>
                 
                 {{-include("@UebusaitoBundleViews/include/captcha.html.twig")-}}
@@ -51,7 +49,7 @@
             </form>
             
             {% if (settingRow['website_active'] == true) %}
-                <div>
+                <div class="align_center">
                     <a class="mdc-button mdc-button--raised mdc-button--dense" href="{{path("root_render", {'_locale': urlLocale, 'urlCurrentPageId': 3})}}">{% trans %}authentication_10{% endtrans %}</a>
                     <a class="mdc-button mdc-button--raised mdc-button--dense" href="{{path("root_render", {'_locale': urlLocale, 'urlCurrentPageId': 4})}}">{% trans %}authentication_11{% endtrans %}</a>
                 </div>
