--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/recover_password.html.twig
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/recover_password.html.twig
@@ -1,45 +1,33 @@
-{% form_theme form "bootstrap_3_layout.html.twig" %}
+{% form_theme form "@UebusaitoBundleViews/layout/layout_form_materialDesign.html.twig" %}
 
 <div>
     {% if response.values.userId == null %}
         <h3 class="margin_clear">{% trans %}recover_password_1{% endtrans %}</h3>
-        <form id="form_recover_password" class="margin_top" action="{{path("recover_password", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
-            <div class="form-group">
-                {{form_label(form.email, "recover_password_2")}}
-                <div class="input-group">
-                    <span class="input-group-addon"><i class="fa fa-envelope"></i></span>
-                    {{form_errors(form.email)}}
-                    {{form_widget(form.email)}}
-                </div>
+        <form id="form_recover_password" action="{{path("recover_password", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
+            <div class="group_form">
+                <i class="material-icons">email</i>
+                {{form_row(form.email, {'label': "recover_password_2"})}}
             </div>
 
             {{form_widget(form._token)}}
-
-            <input class="button_custom" type="submit" value="{% trans %}button_4{% endtrans %}"/>
+            
+            {{form_widget(form.submit, {'label': "button_4"})}}
         </form>
     {% else %}
         <h3 class="margin_clear">{% trans %}recover_password_3{% endtrans %}</h3>
-        <form id="form_change_password" class="margin_top" action="{{path("recover_password", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
-            <div class="form-group">
-                {{form_label(form.password, "recover_password_4")}}
-                <div class="input-group">
-                    <span class="input-group-addon"><i class="fa fa-key"></i></span>
-                    {{form_errors(form.password)}}
-                    {{form_widget(form.password)}}
-                </div>
+        <form id="form_change_password" action="{{path("recover_password", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
+            <div class="group_form">
+                <i class="material-icons">linear_scale</i>
+                {{form_row(form.password, {'label': "recover_password_4"})}}
             </div>
-            <div class="form-group">
-                {{form_label(form.passwordConfirm, "recover_password_5")}}
-                <div class="input-group">
-                    <span class="input-group-addon"><i class="fa fa-key"></i></span>
-                    {{form_errors(form.passwordConfirm)}}
-                    {{form_widget(form.passwordConfirm)}}
-                </div>
+            <div class="group_form">
+                <i class="material-icons">linear_scale</i>
+                {{form_row(form.passwordConfirm, {'label': "recover_password_5"})}}
             </div>
 
             {{form_widget(form._token)}}
 
-            <input class="button_custom" type="submit" value="{% trans %}button_4{% endtrans %}"/>
+            {{form_widget(form.submit, {'label': "button_4"})}}
         </form>
     {% endif %}
 </div>
