--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/index.html.twig
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/index.html.twig
@@ -56,10 +56,10 @@
     </div>
    
     <header class="mdc-toolbar mdc-toolbar--fixed mdc-toolbar--waterfall mdc-toolbar--flexible mdc-toolbar--flexible-default-behavior mdc-toolbar--flexible-space-maximized">
-        <div class="mdc-toolbar__row">
+        <div class="mdc-toolbar__row mdc-toolbar__row--with-image">
             <section class="mdc-toolbar__section mdc-toolbar__section--align-start">
                 <a id="menu_root_button" class="material-icons mdc-toolbar__menu-icon display_mobile" href="javascript:void(0)">menu</a>
-                <span class="mdc-toolbar__title">Title</span>
+                <span class="mdc-toolbar__title">{{websiteName}}</span>
             </section>
             <section class="mdc-toolbar__section mdc-toolbar__section--align-end" role="toolbar">
                 <!-- Widget - Search -->
@@ -237,7 +237,7 @@
         var text = {
             'warning': "{{"index_3"|trans}}",
             'ok': "{{"index_4"|trans}}",
-            'abort': "{{"index_5"|trans}}",
+            'close': "{{"index_5"|trans}}",
             'ajaxConnectionError': "{{"index_6"|trans}}"
         };
 
