--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/css/captcha.css
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/css/captcha.css
@@ -1,9 +1,9 @@
 /* line 3, ../scss/captcha.scss */
-.captcha { text-align: center; margin-bottom: 10px; }
-/* line 7, ../scss/captcha.scss */
+.captcha { text-align: left; }
+/* line 6, ../scss/captcha.scss */
 .captcha .icon { position: relative; top: 2px; cursor: pointer; }
-/* line 12, ../scss/captcha.scss */
-.captcha img { border: 1px solid #000000; }
+/* line 11, ../scss/captcha.scss */
+.captcha img { vertical-align: middle; border: 1px solid #000000; }
 /* line 15, ../scss/captcha.scss */
 .captcha input { position: relative; top: 1px; }
 
