--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/css/system/basic.css
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/css/system/basic.css
@@ -27,7 +27,13 @@
 .margin_top_clear { margin-top: 0 !important; }
 
 /* line 69, ../../scss/system/utility.scss */
+.align_left { text-align: left; }
+
+/* line 72, ../../scss/system/utility.scss */
 .align_center { text-align: center; }
+
+/* line 75, ../../scss/system/utility.scss */
+.align_right { text-align: right; }
 
 /*html { position: relative; min-height: 100%;
 }
@@ -450,56 +456,54 @@ main { padding-bottom: 80px; }
 /* line 1056, ../../scss/system/basic.scss */
 .mdc-toolbar-fixed-adjust { margin-top: 200px; }
 
-/* line 1062, ../../scss/system/basic.scss */
+/* line 1060, ../../scss/system/basic.scss */
+.mdc-toolbar__row--with-image:first-child::after { background-image: url("../../images/templates/basic/16-9.jpg"); background-size: cover; background-position: center; }
+
+/* line 1069, ../../scss/system/basic.scss */
 .page_container .header h1 { margin: 0; }
 
-/* line 1074, ../../scss/system/basic.scss */
+/* line 1081, ../../scss/system/basic.scss */
 .footer { display: flex; justify-content: center; flex-direction: column; text-align: center; background-color: #004ba0; position: absolute; bottom: 0; width: 100%; height: 80px; }
-/* line 1087, ../../scss/system/basic.scss */
-.footer .icon div { display: inline-block; margin: 5px 10px; }
 /* line 1094, ../../scss/system/basic.scss */
+.footer .icon div { display: inline-block; margin: 5px 10px; }
+/* line 1101, ../../scss/system/basic.scss */
 .footer .text p { margin: 0; font-size: 12px; }
 
-/* line 1101, ../../scss/system/basic.scss */
+/* line 1108, ../../scss/system/basic.scss */
 .module { width: 100%; margin: auto; border: 1px solid #dadada; background-color: #ececec; }
 
-/* line 1107, ../../scss/system/basic.scss */
-.module, .module_clean { padding: 5px; overflow: hidden; }
-/* line 1111, ../../scss/system/basic.scss */
-.module .settings, .module_clean .settings { display: none; }
 /* line 1114, ../../scss/system/basic.scss */
+.module, .module_clean { padding: 5px; overflow: hidden; }
+/* line 1118, ../../scss/system/basic.scss */
+.module .settings, .module_clean .settings { display: none; }
+/* line 1121, ../../scss/system/basic.scss */
 .module .drag, .module_clean .drag { display: none; }
-/* line 1119, ../../scss/system/basic.scss */
+/* line 1126, ../../scss/system/basic.scss */
 .module .title i, .module .title h3, .module_clean .title i, .module_clean .title h3 { display: inline-block; vertical-align: middle; margin: 0; }
-/* line 1125, ../../scss/system/basic.scss */
+/* line 1132, ../../scss/system/basic.scss */
 .module .mdc-card__actions, .module_clean .mdc-card__actions { padding: 0 !important; min-height: auto !important; }
-/* line 1130, ../../scss/system/basic.scss */
+/* line 1137, ../../scss/system/basic.scss */
 .module .textField_container, .module_clean .textField_container { margin-top: 5px; }
-/* line 1133, ../../scss/system/basic.scss */
+/* line 1140, ../../scss/system/basic.scss */
 .module .mdc-text-field, .module mdc-select, .module_clean .mdc-text-field, .module_clean mdc-select { height: auto !important; }
-/* line 1136, ../../scss/system/basic.scss */
+/* line 1143, ../../scss/system/basic.scss */
 .module .mdc-text-field_hiddeFix, .module_clean .mdc-text-field_hiddeFix { display: block !important; margin: 0 !important; }
 
-/* line 1142, ../../scss/system/basic.scss */
+/* line 1149, ../../scss/system/basic.scss */
 .mdc-button { margin: 5px 0; }
-/* line 1145, ../../scss/system/basic.scss */
+/* line 1152, ../../scss/system/basic.scss */
 .mdc-button i { display: inline-block; width: 18px; height: 18px; margin-right: 8px; font-size: 18px; line-height: inherit; vertical-align: top; }
 
-/* line 1157, ../../scss/system/basic.scss */
+/* line 1164, ../../scss/system/basic.scss */
 .group_form > i, .group_form > label, .group_form > .form_row { display: inline-block; }
-/* line 1161, ../../scss/system/basic.scss */
+/* line 1168, ../../scss/system/basic.scss */
 .group_form > i { vertical-align: middle; }
-/* line 1165, ../../scss/system/basic.scss */
+/* line 1172, ../../scss/system/basic.scss */
 .group_form > label { position: relative; top: -5px; padding-right: 10px; }
 
-/* line 1173, ../../scss/system/basic.scss */
-.captcha img { vertical-align: middle; }
-/* line 1177, ../../scss/system/basic.scss */
-.captcha .mdc-text-field { margin-top: 0 !important; }
-
-/* line 1182, ../../scss/system/basic.scss */
+/* line 1179, ../../scss/system/basic.scss */
 .menu_registration { list-style-type: none; margin: 0; padding: 0; }
-/* line 1187, ../../scss/system/basic.scss */
+/* line 1184, ../../scss/system/basic.scss */
 .menu_registration li { display: inline-block; }
 
 /*# sourceMappingURL=basic.css.map */
