--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/scss/system/utility.scss
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/scss/system/utility.scss
@@ -66,8 +66,14 @@ $widthDesktop: "840px";
     margin-top: 0 !important;
 }
 
+.align_left {
+    text-align: left;
+}
 .align_center {
     text-align: center;
+}
+.align_right {
+    text-align: right;
 }
 
 /*html {
