--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/module/authentication.html.twig
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/module/authentication.html.twig
@@ -35,15 +35,19 @@
             {% form_theme form "@UebusaitoBundleViews/layout/layout_form_materialDesign.html.twig" %}
 
             <form id="form_authentication" class="form_user_authentication" action="{{path("authentication_enter_check", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
-                {{form_row(form._username, {'label': "authentication_6"})}}
-                {{form_row(form._password, {'label': "authentication_7"})}}
-                
-                <div>
-                    {{form_widget(form.submit, {'label': "authentication_9"})}}
-                    {{form_widget(form._remember_me, {'label': "authentication_8"})}}
+                <div class="group_form">
+                    <i class="material-icons">pets</i>
+                    {{form_row(form._username, {'label': "authentication_6"})}}
+                </div>
+                <div class="group_form">
+                    <i class="material-icons">linear_scale</i>
+                    {{form_row(form._password, {'label': "authentication_7"})}}
                 </div>
                 
                 {{-include("@UebusaitoBundleViews/include/captcha.html.twig")-}}
+                
+                {{form_widget(form._remember_me, {'label': "authentication_8"}, {'class': "mdc-typography--caption"})}}
+                {{form_widget(form.submit, {'label': "authentication_9"})}}
                 
                 {{form_widget(form._token)}}
             </form>
